Fix overlapping mentions

--- a/src/platform-apps/channels/styles.scss
+++ b/src/platform-apps/channels/styles.scss
@@ -423,6 +423,9 @@
         color: black;
         padding: 3px;
         border-radius: 5px;
+        margin-bottom: 0.8px;
+        margin-top: 0.8px;
+        display: inline-block;
       }
     }
   }
